# Ableton-Hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_exe.bat  pyproject.toml  requirements.txt  run_ableton_hub.bat  run_ableton_hub.pyw  test_release.bat
docs/: FEATURE_RECOMMENDATIONS.md  GUI_WIDGET_AUDIT.md  INSTALLATION_MAC.md  INSTALLATION_WINDOWS.md  NEW_FEATURES.md  PHASE_25_IMPLEMENTATION.md  REMAINING_PHASES_PLAN.md  TEST_SUITE_ANALYSIS.md
resources/images/: hub-logo.psd  repo-banner.psd
resources/styles/: README.md  __init__.py  style_config.json
src/: __init__.py  app.py  config.py  main.py
src/database/: __init__.py  db.py  migrations.py  models.py
src/database/repositories/: __init__.py  collection_repository.py  location_repository.py  project_repository.py
src/resources/styles/: __init__.py
src/services/: __init__.py  als_parser.py  archive_service.py  asd_parser.py  audio_player.py  audio_preview.py  duplicate_detector.py  export_tracker.py  health_calculator.py  link_scanner.py  live_detector.py  live_launcher.py  marker_export.py  marker_extractor.py  ml_clustering.py  ml_feature_extractor.py  recommendation_engine.py  remote_sync.py  scanner.py  similarity_analyzer.py  smart_collections.py  watcher.py
src/ui/: __init__.py  main_window.py  theme.py
src/ui/controllers/: __init__.py  collection_controller.py  live_controller.py  location_controller.py  project_controller.py  scan_controller.py  view_controller.py
src/ui/dialogs/: __init__.py  add_live_installation.py  add_location.py  create_collection.py  live_version_dialog.py  log_viewer_dialog.py  project_details.py  select_exports_dialog.py  settings_dialog.py  similar_projects_dialog.py  smart_collection.py
src/ui/managers/: __init__.py  menu_bar_manager.py  toolbar_manager.py  view_manager.py
src/ui/widgets/: __init__.py  collection_view.py  health_dashboard.py  link_panel.py  location_panel.py  project_card.py  project_grid.py  project_properties_view.py  recommendations_panel.py  search_bar.py  sidebar.py  tag_editor.py
src/ui/widgets/sidebar_package/: __init__.py  backups_section.py  collections_section.py  live_section.py  locations_section.py  navigation_section.py  sidebar.py  tags_section.py
src/ui/workers/: __init__.py  als_parser_worker.py  backup_scan_worker.py  base_worker.py  similar_projects_worker.py
src/utils/: __init__.py  fuzzy_match.py  logging.py  paths.py
tests/: __init__.py  examine_liveset_scale.py  examine_scale.py  test_database.py  test_exports.py  test_marker_extraction.py  test_parser_integration.py  test_release.py  test_scanner.py  test_utils.py
