[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ableton-hub"
version = "1.0.1"
description = "Cross-platform desktop application for organizing Ableton projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tom Carlile", email = "carlile.tom@gmail.com"}
]
keywords = ["ableton", "music", "production", "project-management", "pyqt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "PyQt6>=6.10.0",
    "SQLAlchemy>=2.0.0",
    "watchdog>=6.0.0",
    "zeroconf>=0.148.0",
    "qasync>=0.28.0",
    "aiosqlite>=0.22.0",
    "Pillow>=12.0.0",
    "rapidfuzz>=3.14.0",
    # ML/AI Features (Phase 5+) - Lazy loaded to avoid slow startup
    "scikit-learn>=1.8.0",
    # TESTING: Upgraded to numpy 2.x - major version change, testing compatibility
    "numpy>=2.0.0",
    # TESTING: Upgraded to pandas 3.x - major version change, removed deprecated functionality
    "pandas>=3.0.0",
    # Audio Feature Extraction (for ML content analysis) - Lazy loaded
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    # Enhanced XML Parsing (for deeper ALS analysis) - Optional, falls back to stdlib
    "lxml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ableton-hub = "src.main:main"

[project.gui-scripts]
ableton-hub-gui = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.ico", "*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
