[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ableton-hub"
version = "1.0.6"
description = "Cross-platform desktop application for organizing Ableton projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tom Carlile", email = "carlile.tom@gmail.com"}
]
keywords = ["ableton", "music", "production", "project-management", "pyqt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "PyQt6>=6.10.0",
    "SQLAlchemy>=2.0.0",
    "watchdog>=6.0.0",
    "zeroconf>=0.148.0",
    "qasync>=0.28.0",
    "aiosqlite>=0.22.0",
    "Pillow>=12.0.0",
    "rapidfuzz>=3.14.0",
    # ML/AI Features (Phase 5+) - Lazy loaded to avoid slow startup
    "scikit-learn>=1.8.0",
    # TESTING: Upgraded to numpy 2.x - major version change, testing compatibility
    "numpy>=2.0.0",
    # TESTING: Upgraded to pandas 3.x - major version change, removed deprecated functionality
    "pandas>=3.0.0",
    # Audio Feature Extraction (for ML content analysis) - Lazy loaded
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    # Enhanced XML Parsing (for deeper ALS analysis) - Optional, falls back to stdlib
    "lxml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ableton-hub = "src.main:main"

[project.gui-scripts]
ableton-hub-gui = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.ico", "*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E402",  # Module level import not at top of file (deferred imports are intentional)
    "E712",  # Avoid equality comparisons to True (SQLAlchemy filters need == True)
    "E501",  # Line too long (we'll fix critical ones, but allow some long lines)
    "E711",  # Comparison to None should be `cond is None` (SQLAlchemy uses == None)
    "F401",  # Unused imports (some are for availability checks)
    "F841",  # Local variable assigned but never used (some intentional)
    "N806",  # Variable should be lowercase (ML code uses X, X_scaled convention)
    "N803",  # Argument name should be lowercase (ML code uses X_scaled convention)
    "N802",  # Function name should be lowercase (PyQt method names like showEvent, closeEvent)
    "UP022",  # Prefer capture_output (legacy subprocess calls)
    "C401",  # Unnecessary generator (set comprehensions with queries are clearer)
    "I001",  # Import block is un-sorted (auto-fixable, but not critical)
    "W293",  # Blank line contains whitespace (auto-fixable)
    "W291",  # Trailing whitespace (auto-fixable)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# SQLAlchemy plugin helps with Column type inference
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Show error codes for easier suppression
show_error_codes = true

# Per-module overrides for known false positives
[[tool.mypy.overrides]]
module = [
    "src.database.*",
    "src.ui.widgets.*",
    "src.ui.dialogs.*",
    "src.services.watcher",
    "src.services.scanner",
    "src.services.archive_service",
    "src.services.smart_collections",
    "src.services.duplicate_detector",
    "src.services.audio_preview",
    "src.services.export_tracker",
    "src.services.remote_sync",
    "src.ui.controllers.*",
    "src.ui.workers.*",
]
# Suppress SQLAlchemy Column type false positives
# These are runtime-correct but mypy can't infer properly
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.services.ml_feature_extractor",  # librosa (external library, lazy-loaded)
    "src.services.link_scanner",  # zeroconf (external library)
    "src.services.health_calculator",  # SQLAlchemy Mapped types
    "src.services.live_launcher",  # External library types
]
# Suppress false positives from external libraries without type stubs
ignore_errors = true

[tool.pyright]
pythonVersion = "3.11"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
